--- a/style.css
+++ b/style.css
@@ -7,8 +7,21 @@
     height: 100%;
     transition: all 0.3s linear;
     background: rgb(240, 157, 81, 0.5);
-    z-index: 34;
+    z-index: 349999;
     visibility: hidden;
+  }
+  .cart-design{
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
+    z-index: 350000;
+    background: rgb(231, 226, 221);
+    padding: 1.5rem;
+    transition: all 0.3s linear;
+    transform: translateX(100%);
   }
   
   .showCart {
